  LO offsets to be corrected without inducing decorrelation.
* Working polarization dependent delay and phase offsets (from Chris)
* Experimental linear2circular conversion (from Chris)
* Complex Double sideband (RDBE/Xcube) sampling support (from Chris)
* Explicitly set pthreads as joinable
* Fix one aspect of non-power-of-two VDIF threads
* Move some Mark5 functions around to simplify things for the new VDIF code

Version 2.2
~~~~~~~~~~~
* Correct scaling of autocorrelations for LBA-format data
* Optimized corner turners implemented for interlaced VDIF
* Fixed a scaling bug for zoom band data
* Allow building without IPP (needs fftw) [Thanks Richard Dodson!]
* .pc files now include full compile-in info for ipp or fftw as appropriate
* Check for a common .dir file anomoly caused by hand editing
* Stop 0.5 ns delay wobble in 2 Gbps Mark5B format
* c++11 compliance
* Finally, kill off the MODE errors and Stale data errors for cases where
  subintegration time is between 1 and 2 seconds long.  This enables 1 Hz
  resolution.
* Use openmp to parallelize common corner turners for VDIF
* Fix weights (and maybe more) for setups differing only by pcal setup (Adam)
* Defeat data "echoes" that that would occur on each scan start after files
  ran out of data
* Properly scale multicast weights when selecting bands or performing zooms
* Avoid a rounding error which can lead to wrong scan choice when playing back
  nativemk5 VDIF data
* Tagged as DiFX 2.2, May 31, 2013

Version 2.1
~~~~~~~~~~~
* Version number change from 2.0.2 prior to tagging
* Tagging Version 2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
* Correctly scale cross-correlation amplitudes for pulsar binning when using Tsys>0 (accounts for varying # samples per bin c.f. nominal)
* Correctly scale LBA format visibilities, reducing the size of ACCOR corrections
* Fix bug when pulsar binning/gating and xmaclength > nfftchan
* Add collection of drive statistics to native Mark5